Modificacion realizaba por Luis Borja
Modificacion realizada en apuros para nuevo repositorio ;)

--- a/index.html
+++ b/index.html
@@ -2,5 +2,7 @@
 <body>
 <h1> "PRUEBA GIT LINEA 1 :ESCRITA POR JESSICA OLIVO</h1>
 <h2>Hola como estas </h2>
+<h1> "Prueba git number two by Luis"</h1>
+<h2> Prueba2 xd </h2>
 <body>
 </html>
